tests/snapshots/examples_fixtures/Modules__StudentGrades.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/StudentGrades.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `Modules.StudentGrades` doesn't match file path `examples/Modules/StudentGrades.flx`.

  examples/Modules/StudentGrades.flx:9:1
  |
9 | module Modules.StudentGrades {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
